--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <div class="container">
+  <app-cockpit (srvCreated)="onServerAdded($event)"
+  (bpCreated)="onBlueprintAdded($event)"
+  ></app-cockpit>
+  <hr>
   <div class="row">
-    <div class="col-xs-12">
-      <h3>I am Hot!!</h3>
-      <hr> 
-      <app-servers>Loading...</app-servers>
-      <!-- for selector in th form 'app-servers' -->
-
-      <!-- <div app-servers></div> -->
-      <!-- for selectors in the form '[app-servers]'  -->
-
-      <!-- <div class="app-servers"></div>
-      for selectors in the form '.app-servers' i.e class. -->
-
+    <div class="col-xs-12" >
+      <app-server-element     
+      *ngFor="let serverElement of serverElements"
+      [srvElement] = "serverElement">
+            <p>
+              <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+              <em *ngIf="serverElement.type === 'blueprint'" style="color: blue">{{ serverElement.content }}</em>
+            </p>
+      </app-server-element>
     </div>
   </div>
 </div>
-
